src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/AMDSamplePositions_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/AMDSamplePositions_StringErrorContext.class */
public final class AMDSamplePositions_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglSetMultisamplefvAMD(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/AMDSamplePositionsErrorContext");
        methods.put("glSetMultisamplefvAMD(IILjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/AMDSamplePositionsErrorContext");
        methods.put("glSetMultisamplefvAMD(II[F)V", "net/labymod/core/laby3d/opengl/error/generated/AMDSamplePositionsErrorContext");
        return methods;
    }
}
